@@ -3,5 +3,5 @@ CREATE TABLE `dupe_key` (
   `b` int(11) default NULL,
   `c` int(11) default NULL,
   KEY `a` (`a`),
-  KEY `a_2` (`a`,`b`),
+  KEY `a_2` (`a`,`b`)
 ) ENGINE=MyISAM DEFAULT CHARSET=latin1
