@@ -4,7 +4,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use English qw('-no_match_vars);
-use Test::More tests => 1;
+use Test::More tests => 4;
 
 require '../../common/DSNParser.pm';
 require '../../common/Sandbox.pm';
@@ -17,6 +17,19 @@ my $cnf = '/tmp/12345/my.sandbox.cnf';
 my $cmd = "perl ../mk-duplicate-key-checker -F $cnf ";
 
 my $output = `$cmd -d mysql -t columns_priv -v`;
-like($output, qr/mysql\s+columns_priv\s+MyISAM/, 'Finds mysql.columns_priv PK');
+like($output, qr/mysql\.columns_priv\s+MyISAM/, 'Finds mysql.columns_priv PK');
 
+$sb->wipe_clean($dbh);
+is(`$cmd`, '', 'No dupes on clean sandbox');
+
+$sb->create_dbs($dbh, ['test']);
+$sb->load_file('master', '../../common/t/samples/dupe_key.sql', 'test');
+
+$output = `$cmd --nosql | diff samples/nosql_output.txt -`;
+is($output, '', '--nosql');
+
+$output = `$cmd --nocompact | diff samples/nocompact_output.txt -`;
+is($output, '', '--nocompact');
+
+$sb->wipe_clean($dbh);
 exit;
