@@ -1,5 +1,12 @@
 Changelog for mk-duplicate-key-checker:
 
+   * #-commented all lines except SQL statements (issue 82).
+   * Added --[no]sql option (issue 82).
+   * Added --[no]compact option (issue 82).
+   * Print header for every table instead of every database.
+   * Removed --allatonce option.
+   * Updated documentation and shared code.
+
 2008-12-01: version 1.1.9
 
    * Updates to shared code.
